fix fucked fieldset overflows

--- a/app/page.css
+++ b/app/page.css
@@ -195,16 +195,6 @@ table {
   width: 100%;
 }
 
-fieldset {
-  border-radius: 5px;
-}
-fieldset > legend {
-  white-space: nowrap;
-}
-fieldset > hr {
-  margin: 4px 0;
-}
-
 dl {
   justify-content: space-between;
   align-items: center;
